--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,38 @@
 Package: apptemplate1
-Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: Template Single-App Package
+Version: 0.0.1
+Authors@R: 
+  person(
+    given = "Bobby", 
+    family = "Fatemi", 
+    role = c("aut", "cre"), 
+    email = "bfatemi07@gmail.com"
+  )
+Description: Template for a shiny app built as R package, 
+  with full coverage/CI unit testing of App and package.
+License: file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.2.3
+URL: https://github.com/r-data-science/apptemplate1
+BugReports: https://github.com/r-data-science/apptemplate1/issues
+Config/testthat/edition: 3
+Imports:
+  rdstools,
+  shiny,
+  shinyWidgets,
+  shinycssloaders,
+  ggplot2,
+  ggtext,
+  bslib,
+  waiter,
+  fs,
+  stringr
+Remotes:
+  git@github.com:r-data-science/rdstools.git
+Depends: 
+  R (>= 4.0)
+Suggests: 
+    shinytest2,
+    covr,
+    testthat (>= 3.0.0)
