--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -23,20 +23,11 @@ jobs:
           - {os: ubuntu-latest,   r: 'release'}
 
     env:
-      # GITHUB_PAT: ${{ secrets.GH_PAT }}
-      # RPG_CONN_STRING: ${{ secrets.RPG_CONN_STRING }}
       R_KEEP_PKG_SOURCE: yes
 
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
-
-      # - name: Install System Dependencies
-      #   if: runner.os == 'Linux'
-      #   run: |
-      #     sudo apt-get update && sudo apt-get upgrade -y
-      #     sudo apt-get install -y libcurl4-openssl-dev
-      #   shell: bash
 
       - name: Setup Pandoc
         uses: r-lib/actions/setup-pandoc@v2
@@ -48,15 +39,7 @@ jobs:
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
 
-      # - name: Install Private Depends
-      #   run: |
-      #     install.packages("remotes", repos = "https://packagemanager.posit.co/cran/latest")
-      #     remotes::install_github("r-data-science/rpgconn")
-      #     remotes::install_github("r-data-science/rdstools")
-      #     remotes::install_github("r-data-science/rdscore")
-      #   shell: Rscript {0}
-
-      - name: Setup Cran Depends
+      - name: Install Dependencies
         uses: r-lib/actions/setup-r-dependencies@v2
         env:
           _R_CHECK_FORCE_SUGGESTS_: false
@@ -71,7 +54,7 @@ jobs:
         with:
           upload-snapshots: true
 
-      # - name: Upload Coverage to Codecov
-      #   uses: codecov/codecov-action@v3
-      #   env:
-      #     CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      - name: Upload Coverage to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
