Updated tests and snapshots

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,17 +18,18 @@ URL: https://github.com/r-data-science/apptemplate1
 BugReports: https://github.com/r-data-science/apptemplate1/issues
 Config/testthat/edition: 3
 Imports:
-  rdstools,
-  shiny,
-  shinyWidgets,
-  shinycssloaders,
-  ggplot2,
-  ggtext,
-  bslib,
-  waiter,
-  fs,
-  stringr,
-  data.table
+    rdstools,
+    shiny,
+    shinyWidgets,
+    shinycssloaders,
+    ggplot2,
+    ggtext,
+    bslib,
+    waiter,
+    fs,
+    stringr,
+    data.table,
+    rmarkdown
 Remotes:
   git@github.com:r-data-science/rdstools.git
 Depends: 
