--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,9 +18,14 @@ importFrom(fs,dir_create)
 importFrom(fs,dir_delete)
 importFrom(fs,dir_tree)
 importFrom(fs,path)
+importFrom(fs,path_ext)
 importFrom(fs,path_temp)
 importFrom(rdstools,log_inf)
+importFrom(rdstools,log_suc)
 importFrom(rdstools,log_wrn)
+importFrom(rmarkdown,html_document)
+importFrom(rmarkdown,pdf_document)
+importFrom(rmarkdown,word_document)
 importFrom(shiny,HTML)
 importFrom(shiny,br)
 importFrom(shiny,column)
